[project]
name = "pulao"
version = "0.0.1"
description = "A assistant for trader"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "concurrent-log-handler>=0.9.29",
    "polars>=1.39.3",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "chinese-calendar>=1.11.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "B"]  # 基础 + 常见 bug
ignore = ["E501"]              # 行长度交给 Black

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools.packages.find]
include = ["pulao"]
